--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-permission": "^6.12"
     },
     "require-dev": {
